* Fix fw_def vertical alignment (@clkao)

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -552,6 +552,7 @@ span .tone {
     padding-left: 3ex;
     font-size: 90%;
     word-break: normal !important;
+    vertical-align: top;
 }
 
 .translation .fw_lang {
@@ -1037,6 +1038,10 @@ ul.dropdown-menu {
 svg {
     border: 2px solid #a00;
     background: white;
+    margin-left: 5px;
+    @include box-shadow(hsl(0,0%,83%) 0 3px 3px);
+}
+canvas {
     margin-left: 5px;
     @include box-shadow(hsl(0,0%,83%) 0 3px 3px);
 }
